# jsonfmt

./: .gitignore  Dockerfile  README.md  Taskfile.yml  cabal.project  fourmolu.yaml  gren.json  install.sh  jsonfmt.cabal  package-lock.json  package.json  publish.fish
.github/workflows/: build.yml
scripts/: build-dev.fish  build.fish  doc-preview.fish  entrypoint.fish  run-tests.fish  setup.fish
src/: IO.hs  Json.hs  Main.gren  Main.hs  Parse.hs
src/App/: Cmd.gren  Init.gren  Model.gren  Msg.gren  Subscriptions.gren  Update.gren
src/Json/: Parse.hs  Pretty.hs
src/Parse/: Json.hs
tests/: apply-jsonfmt.fish  gren.json
tests/src/: Main.gren  Tests.gren
