cabal-version   : 2.2

name            : jsonfmt
version         : 0.2.1
synopsis        : 
homepage        : json pretty printer
stability       : experimental
tested-with     : GHC == 8.6.5

copyright       : (c) 2019-2020 Aramís Concepción Durán
license         : GPL-3.0-only
license-file    : LICENSE

author          : Aramís Concepción Durán <aramis@systemli.org>
maintainer      : Aramís Concepción Durán <aramis@systemli.org>

build-type          : Simple
extra-source-files  : README.md

description :
    An experimental JSON pretty printer, inspired by
    elm-format, written in Haskell.


executable jsonfmt
    default-language    : Haskell2010
    hs-source-dirs      : src
    main-is             : Main.hs

    ghc-options :
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-missing-import-lists
        -Wno-missing-local-signatures
        -Wno-monomorphism-restriction
        -Wno-redundant-constraints
        -Wno-safe
        -Wno-type-defaults
        -Wno-unsafe

    default-extensions :
        ApplicativeDo
        BlockArguments
        DuplicateRecordFields
        LambdaCase
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        PackageImports
        RecordWildCards
        Strict

    build-depends :
      , base == 4.12.*

     -- source repo packages
      , ulme
      , ulme-io
      , ulme-json


source-repository head
    type        : git
    location    : https://git.sr.ht/~aramis/jsonfmt
