cabal-version           : 2.2
name                    : jsonfmt
version                 : 0.4.0
synopsis                : 
homepage                : json pretty printer
copyright               : (c) 2019-2020 Aramís Concepción Durán
license                 : GPL-3.0-only
license-file            : LICENSE
author                  : Aramís Concepción Durán <aramis@systemli.org>
maintainer              : Aramís Concepción Durán <aramis@systemli.org>
build-type              : Simple
extra-source-files      : README.md
description             : An experimental JSON pretty printer, inspired by elm-format, written
                          in Haskell.


executable jsonfmt
    default-language    : Haskell2010
    hs-source-dirs      : src
    main-is             : Main.hs
    other-modules       : Ulme.Json Ulme.Json.Parse Ulme.Json.Pretty Ulme.Parse

    ghc-options         : -Werror
                          -Weverything
                          -Wno-all-missed-specialisations
                          -Wno-missing-deriving-strategies
                          -Wno-missing-import-lists
                          -Wno-missing-local-signatures
                          -Wno-missing-safe-haskell-mode
                          -Wno-monomorphism-restriction
                          -Wno-redundant-constraints
                          -Wno-safe
                          -Wno-type-defaults
                          -Wno-unsafe
                      -- dev
                         --Wno-missing-export-lists
                         --Wno-unused-binds
                         --Wno-unused-imports
                         --Wno-unused-matches
                         --Wno-unused-packages

    default-extensions  : AllowAmbiguousTypes
                          ApplicativeDo
                          BinaryLiterals
                          BlockArguments
                          ConstraintKinds
                          DeriveAnyClass
                          DeriveGeneric
                          DuplicateRecordFields
                          ExplicitForAll
                          ExtendedDefaultRules
                          FlexibleContexts
                          FlexibleInstances
                          GeneralisedNewtypeDeriving
                          HexFloatLiterals
                          ImportQualifiedPost
                          LambdaCase
                          MultiParamTypeClasses
                          NamedFieldPuns
                          NegativeLiterals
                          NoImplicitPrelude
                          NumDecimals
                          NumericUnderscores
                          OverloadedStrings
                          PackageImports
                          RecordWildCards
                          RecursiveDo
                          ScopedTypeVariables
                          Strict
                          TupleSections

    build-depends       : base >= 4.12
                     -- source repo packages
                        , ulme
                        , ulme-io
                        , ulme-json


source-repository head
    type                : git
    location            : https://git.sr.ht/~aramis/jsonfmt
